[package]
name = "chest"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.18", features = ["native-tls"] }
url = "2.2"
uuid = { version = "1", features = ["v4"] }
config = "0.13"
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "sqlite", "macros"] }
